# fdk-fulltext-search

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.contract.yml  docker-compose.yml  fdk-fulltext-search-api.yaml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  settings.py  tasks.py
.github/workflows/: codeql.yaml  constraints.txt  deploy-demo-digdir.yaml  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod-digdir.yaml  deploy-prod.yaml  deploy-staging-digdir.yaml  deploy-staging.yaml
application/: __init__.py  endpoints.py
application/ingest/: __init__.py
application/search/: client.py  queries.py
elasticsearch/: _old_create_dataservices_index.json  create_concept_index.json  create_concepts_index.json  create_dataservices_index.json  create_datasets_index.json  create_events_index.json  create_info_index.json  create_informationmodels_index.json  create_public_services_index.json  mapping.json  settings.json
mock_mappings/mappings/: api_informationmodels-c4d3500c-1f2a-4e98-ac42-df6c92d538fe.json  api_informationmodels-fbf46748-57cc-4ecf-9a03-07e1bc5c8d31.json  apis-0261b4f4-172c-483e-a2e9-614aad2dacf0.json  apis-0bd76fe0-0c06-496a-8116-008f4f59955a.json  apis-31efb046-4f25-4751-b59f-57939f3148ad.json  apis-4b2d9666-e9e7-4c90-aada-269623a490f7.json  apis-798fcaf9-bb1a-4309-9a9d-b2c32dc63fe9.json  apis-8b50f357-e373-4947-b5fe-dbde1ed3aacf.json  apis-b53bbe85-8180-49ff-8208-a591be276425.json  apis_005ae674-e138-4364-b116-156a0e92a8f2-302835ae-686c-4188-a823-06d4723adf90.json  apis_005ae674-e138-4364-b116-156a0e92a8f2-9be74b5d-69be-429d-8080-97343faa3849.json  apis_0083d44b-5470-459d-bcc7-4eff99e4c001-0caaa1ed-3ab7-4d6c-a4c7-b5169b0cc970.json  apis_0083d44b-5470-459d-bcc7-4eff99e4c001-fda6415a-b35d-4372-a74f-1541abb4cb17.json  apis_01741cbc-5c4d-49d6-a9d4-d32d386cbcd2-aa5199a9-8078-4ffd-92c6-65f34265d6fe.json  apis_01741cbc-5c4d-49d6-a9d4-d32d386cbcd2-ee681259-ab62-4130-a8b3-3954d29d83bc.json  apis_018a44f6-babc-4240-bcdd-01eff4575258-9f435d86-bc8e-4866-984a-0a802e13a0b1.json  apis_02c34c9a-1653-4d36-a0b4-5ce76bd7659e-52b50f70-f90b-45f9-a311-c524e6776763.json  apis_05fb908c-7cc4-4b68-8925-95a5473ff234-66463baf-5a9e-4c25-bed6-c4ea72c40323.json  apis_05fb908c-7cc4-4b68-8925-95a5473ff234-a0d5e90d-8e69-49f9-b0ad-b9b6bf39f1ce.json  apis_0670b703-e230-42ec-967e-27fe11ed3a69-017cf05a-585d-424e-af89-0bd812a58f42.json  apis_0670b703-e230-42ec-967e-27fe11ed3a69-2b19519b-8d7d-4353-b672-5889ebca7e60.json  apis_08f6e0bd-e4b3-481b-8927-7b476eb0b80f-f244c71c-0e17-4f6b-a670-65293e53273c.json  apis_08f6e0bd-e4b3-481b-8927-7b476eb0b80f-fdd73db0-2ed4-43aa-8522-a25c3c83e8ab.json  apis_097aa545-90df-465d-b077-d00a79f682da-34a3e7ae-7da2-4ce7-87ce-33f036e121dc.json  apis_097aa545-90df-465d-b077-d00a79f682da-e82da52c-4089-4aa9-9afb-e5ba802427f3.json  apis_0cd5b975-75f6-4961-aa86-3d003e8949ec-0122791a-f621-4e63-b9b8-dffe1de93f37.json  apis_0cd5b975-75f6-4961-aa86-3d003e8949ec-2c8e5de3-8d6f-4b6f-83b3-459c1e87e812.json  apis_0d292dab-fdf2-43d1-9c80-e7dadafbab7c-0eb77017-c22c-4f0f-adc5-5313d96d3aa3.json  apis_0d292dab-fdf2-43d1-9c80-e7dadafbab7c-9b0eacdf-65f8-4dd8-9f61-4eb5b5412ebc.json  apis_0d6c8dfb-ebd7-407a-a538-c3bc1e050658-1a9942cd-476b-497c-a959-430e62a3bef2.json  apis_0d6c8dfb-ebd7-407a-a538-c3bc1e050658-8998e869-84d6-4bf8-9366-1552ab8a9364.json  (+320 more)
src/: __init__.py  endpoints.py  gunicorn_config.py
src/adapters/: rabbit.py
tests/: client_test.py  conftest.py  docker-compose-integration.yml  docker-compose.contract.yml  indices_reindex_test.py  ingest_test.py  queries_test.py  query_utils_test.py  rabbitmq_test.py  search_response_test.py  test_client.py  test_indices_info_response.py  test_queries.py  test_queries_for_specific_index.py  test_query_utils.py  test_query_utils_dataset.py  test_rabbitmq.py  test_search_response.py  test_theme_profile.py  test_translation.py  utils.py
(+54 files in other folders)
