[tool.poetry]
name = "fdk-fulltext-search"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "2.2.2"
python-dotenv = "0.21.1"
flask-restful = "0.3.9"
elasticsearch = "7.17.9"
elasticsearch-dsl = "7.4.0"
requests = "2.28.2"
gunicorn = "20.1.0"
flask-cors = "3.0.10"
jsonpath-ng = "1.5.3"
pika = "1.3.1"
feedgen = "0.9.0"
simplejson = "3.18.3"
python-json-logger = "2.0.5"
fdk-rdf-parser = "2.2.10"
aio-pika = "^8.2.5"
nox = "^2022.8.7"
pip = "^23.0.0"
nox-poetry = "^1.0.2"
poetry = "^1.3.2"
virtualenv = "20.16.5"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
mock = "5.0.1"
elasticmock = "1.8.1"
pytest-docker = "^1.0.0"
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
mypy = "^0.991"
pep8-naming = "^0.13.1"
safety = "^2.3.1"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_fulltext_search"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
