[tool.poetry]
name = "fdk-fulltext-search"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-restful = "^0.3.9"
elasticsearch = "^7.17.9"
elasticsearch-dsl = "^7.4.1"
requests = "^2.29.0"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
jsonpath-ng = "^1.5.3"
pika = "^1.3.1"
feedgen = "^0.9.0"
simplejson = "^3.19.1"
python-json-logger = "^2.0.7"
fdk-rdf-parser = "2.2.11"
aio-pika = "^9.0.5"
nox = "^2023.4.22"
pip = "^23.1.2"
nox-poetry = "^1.0.2"
poetry = "^1.4.2"
virtualenv = "20.23.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-mock = "3.10.0"
mock = "5.0.2"
elasticmock = "1.8.1"
pytest-docker = "^1.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.23"
mypy = "^1.2.0"
pep8-naming = "^0.13.1"
safety = "^2.3.5"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_fulltext_search"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
