[tool.poetry]
name = "fdk-fulltext-search"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
flask-restful = "^0.3.10"
elasticsearch = "^7.17.9"
elasticsearch-dsl = "^7.4.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
jsonpath-ng = "^1.6.0"
pika = "^1.3.2"
feedgen = "^1.0.0"
simplejson = "^3.19.2"
python-json-logger = "^2.0.7"
fdk-rdf-parser = "2.4.0"
aio-pika = "^9.3.1"
nox = "^2023.4.22"
pip = "^23.3.2"
nox-poetry = "^1.0.3"
poetry = "^1.7.1"
virtualenv = "20.25.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
mock = "5.1.0"
elasticmock = "1.8.1"
pytest-docker = "^2.0.1"
black = "^23.12.1"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.12.2"
mypy = "^1.8.0"
pep8-naming = "^0.13.3"
safety = "^3.0.0a2"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_fulltext_search"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
